# GoogleTest-CMake-Example

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  Example.cpp  Example.h
test/: CMakeLists.txt  test.cpp
